fix some styling with blogs on firefox

--- a/stylus/3-blog.styl
+++ b/stylus/3-blog.styl
@@ -1,7 +1,7 @@
 //This is the blog-specific style sheet
 
 #blog-content
-  flex 1
+  flex 1 1 auto
   .create-post
     height 25px
     text-align center
@@ -58,7 +58,7 @@ button.show-more:disabled
     color #CCD
   .body
     img
-      max-width 80%
+      max-width 1000px
       margin 0 auto
       display block
     h1
